--- a/Uber_Rides_Report.ipynb
+++ b/Uber_Rides_Report.ipynb
@@ -23,22 +23,22 @@
     "- Filtered date ranges to ensure only 2016 data was included.  \n",
     "\n",
     "## **4. Key Visualizations & Insights**\n",
-    "### **Ride Count by Distance**\n",
+    "#### **Ride Count by Distance**\n",
     "- Most trips covered **0-5 miles**, with ride frequency declining as distance increased.  \n",
     "- Suggests a focus on short-distance, possibly urban commutes.  \n",
     "\n",
-    "### **Miles Traveled by Purpose**\n",
+    "#### **Miles Traveled by Purpose**\n",
     "- **Meetings** accounted for the highest mileage, emphasizing corporate travel.  \n",
     "- Minimal travel was recorded for \"Airport/Travel\" and \"Moving\" purposes.  \n",
     "\n",
-    "### **Ride Distribution by Time of Day**\n",
+    "#### **Ride Distribution by Time of Day**\n",
     "- **Afternoon rides** dominated, with evenings being the second-highest period.  \n",
     "- Morning and night rides were comparatively fewer.  \n",
     "\n",
-    "### **Top 10 Frequent Start Locations**\n",
+    "#### **Top 10 Frequent Start Locations**\n",
     "- **Cary** was the most frequent start location, followed by 'N/A' entries and locations like Morrisville and Whitebridge.  \n",
     "\n",
-    "### **Total Rides Over Time**\n",
+    "#### **Total Rides Over Time**\n",
     "- Ride frequency fluctuated throughout the year, with noticeable spikes in early January, March, and December.  \n",
     "\n",
     "## **5. Key Performance Indicators (KPIs)**\n",
